# usd-profiles-nvidia

./: .coderabbit.yaml  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  repo.toml  ruff.toml
.agents/skills/: README.md
.agents/skills/project-setup-python/: SKILL.md
.agents/skills/project-venv-setup/: SKILL.md
.claude/commands/: sync-from-open-usd-profiles.md  test.md
docs/: licenses.md
examples/python/minimal/: pyproject.toml
examples/python/profile-codegen/: pyproject.toml
skills/: README.md
skills/profile-codegen/: SKILLS.md
skills/project-setup-python/: SKILLS.md
skills/project-venv-setup/: SKILLS.md
src/nvidia_usd_profiles/: __init__.py  __main__.py
src/nvidia_usd_profiles/codegen/: __init__.py  __main__.py  _cli.py  _py_generate.py
src/nvidia_usd_profiles/markdown/: __init__.py  _capabilities.py  _examples.py  _features.py  _model.py  _parameters.py  _parser.py  _profiles.py  _references.py  _requirements.py  _specifications.py
src/nvidia_usd_profiles/model/: __init__.py  _compatibility.py  _example.py
src/nvidia_usd_profiles/serialization/: __init__.py  _json_decoder.py  _json_encoder.py
src/nvidia_usd_profiles/store/: __init__.py  _capabilities.py  _examples.py  _features.py  _keystore.py  (+4 more)
src/usd_profiles_nvidia/: __init__.py
tests/: conftest.py  test_capabilities_parser.py  test_capability.py  test_capability_graph.py  test_capability_graph_requirements.py  test_decoder.py  test_encoder.py  test_examples_parser.py  test_feature.py  test_feature_parser.py  test_feature_store.py  test_features_table.py  test_naming.py  test_omni_compat.py  test_parameter.py  test_parameter_store.py  test_parser.py  test_profiles_lock.py  test_profiles_parser.py  test_py_model.py  test_python_generator.py  test_requirement.py  test_requirements_parser.py  test_requirements_table.py  test_tag.py  test_toml_profiles_parser.py  test_version.py  test_wheel.py
tools/ci/: publish_wheel.py
tools/packman/: config.packman.xml
tools/repoman/: repoman.py
(+197 files in other folders)
