[project]
name = "usd-profiles-nvidia"
dynamic = ["version"]
description = "NVIDIA OpenUSD Profiles"
authors = [
    {name = "NVIDIA"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "jinja2>=3.1.5",
    "markdown-it-py>=3.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
sphinx = [
    "sphinx>=7.2.6",
    "myst-parser>=4.0.0",
]

[project.urls]
Repository = "https://github.com/NVIDIA-Omniverse/usd-profiles-nvidia"
Changelog = "https://github.com/NVIDIA-Omniverse/usd-profiles-nvidia/blob/main/CHANGELOG.md"
Homepage = "https://docs.omniverse.nvidia.com/kit/docs/asset-requirements"
Documentation = "https://docs.omniverse.nvidia.com/kit/docs/asset-requirements"

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/usd_profiles_nvidia", "src/omni"]
artifacts = [
    "src/usd_profiles_nvidia/sphinx/static/_static/**/*",
]

[build-system]
requires = ["hatchling"] # SWIPAT filed under: http://nvbugs/5866335
build-backend = "hatchling.build"
